app/javascript/stylesheets/application.scss
$body-bg: #E7ECEF;
$custom-btn: #e2eff7;

$theme-colors: (
  "primary": #1DA1F2,
  "secondary": #213246,
  "success": #015668,
  "info": #0F81C7,
  "warning": rgb(12, 140, 144),
  "danger": #e24040,
  "light": #ececec,
  "dark": #6c8297
);
@import '~bootstrap/scss/bootstrap';

body {
  font-family: 'Lato', sans-serif;
}

.signin-form {
  background: rgb(175, 177, 179);
  background: linear-gradient(90deg, rgb(221, 225, 226) 5%, rgb(218, 220, 223) 53%, rgba(77, 74, 77, 0.322) 76%);
  border-radius: 3%;
}

.profile-photo {
  height: 70px;
  width: 70px;
  border-radius: 50%;
}

.left-sidebar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  margin-right: 2rem;
  min-height: 100vh;
  overflow-x: hidden;
}

.main-section {
  margin-left: 15rem;
  overflow-x: hidden;
  
}

.top-nav {
  position: fixed;
  width: 84%;
  height: 80px;
  z-index: 900;
  margin-left: 0.3rem;
  overflow-x: hidden;
}

.main-content {
  margin-top: 5rem;
}

.underline {
  width: 12rem;
  height: 0.25rem;
  background: map_get($theme-colors, 'dark');
  margin-left: auto;
  margin-right: auto;
}

.page-heading {
  margin: 2rem 0 0.7rem;
}

.flash-messages {
  position: relative;
  top: 1rem;
  z-index: 1;
}

.opinion-body {
  min-height: 100vh;
  padding: 1rem 2rem;;
}

.nav-link-custom {
  color: map_get($theme-colors, 'dark');
}

.alert-success-custom, .bg-primary-vote {
  background: #5cb85c;
}

.profile-container {
  margin-top: -0.5rem;
}

.profile-edit {
  position: relative;
}

.votes-container {
  width: 250px;
  font-family: 'Roboto', sans-serif;
}

.upvote-text {
  left: 0px;
  top: 30px;
}

.downvote-text {
  left: 157px;
  top: 30px;
}

.active-link {
  background: map-get($theme-colors, 'primary');
  font-weight: bold;
}

.btn-custom {
  transition: .3s ease-out;
  width: 100px;
  background: #fff;
  border-color: map_get($theme-colors, 'primary');
  color: map_get($theme-colors, 'primary');
  font-weight: bold;
  border-radius: 20px;
  padding: 6px 8px;

  &:hover {
    background: $custom-btn;
  }

  &_following {
    transition: .3s ease-out;
    background: map_get($theme-colors, 'primary');
    width: 110px;
    border: none;
    color: #fff;
  }

  &_following:hover {
    background: map_get($theme-colors, 'danger');
    border-color: none;

    span {
      display:none;
    }

    &:before {
      content:"unfollow";
      color: #fff;
    }
  }


}

.profile-banner {
  margin-top: .5rem;
  position: relative;
  margin-bottom: 2rem;
  .cover-image {
    width: 100%;
    height: 237px;
  }
  .user-follow {
    width: 100%;
    position: absolute;
    top: 215px;
    left: 30px;
  }
}

.upvote, .downvote {
  display: block;
  padding-top: 10px;
  padding-bottom: 10px;
  color: #000;

  &.active {
    color: #f00;
  }

  &:hover {
    color: #f00;
    cursor: pointer;
  }
}

.links {
  display: flex;
  list-style: none;

  a {
    margin-right: 1rem;
    font-weight: bold;
    border: none;

    &:hover {
      background: #bcbdc5;
      padding: 5px 10px;
      color: rgb(32, 20, 20);
    }
  }
}

.nav-link-custom:hover,
.user-action-link:hover {
  background-color: map_get($theme-colors, 'primary');
  color: white;
  text-decoration: none;
}


.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
  color: map_get($theme-colors, 'dark');
  background-color: transparent;
  border-color: transparent transparent #3f3e3e;
  border-bottom: 4px solid !important;
  font-size: 20px;
  font-weight: bold;
}

.nav-tabs .nav-link {
  border: 1px solid transparent;
  border-top-left-radius: .25rem;
  border-top-right-radius: .25rem;
  color: map_get($theme-colors, 'dark');
  font-size: 20px;
}

